# coding-workshop-1

./: 1-input.ipynb  2-hands-on.ipynb  2.5-input.ipynb  3-input.ipynb  4-hands-on.ipynb  README.md  main.py  noninstallable_module_example1.py  pyproject.toml  rise.css
example_installable_external_resource/: pyproject.toml
example_installable_external_resource/src/example_installable_external_resource/: __init__.py
example_noninstallable_external_resource/: noninstallable_module_example2.py
