[project]
name = "coding-workshop-1"
version = "0.1.0"
description = "Workshop: sharing Python code basics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pip>=25.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
    "jupyterlab-rise>=0.43.1",
    "voila>=0.5.11",
]

[tool.uv.workspace]
members = [
    "example_installable_external_resource",
]
